<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="169dp"
        android:layout_height="56dp"
        android:text="@string/info"
        android:textSize="35sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <TextView
        android:layout_width="130dp"
        android:layout_height="33dp"
        android:background="#23000000"
        android:gravity="center"
        android:text="@string/_3"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="138dp"
        android:layout_height="37dp"
        android:background="#23000000"
        android:gravity="center"
        android:text="@string/_1km"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="375dp"
        android:layout_height="163dp"
        android:text="@string/vip_18"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.343" />

    <Button
        android:layout_width="343dp"
        android:layout_height="69dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#0D72FF"
        android:onClick="onClickGoMian"
        android:text="@string/number"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"

        app:layout_constraintVertical_bias="0.357" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="210dp"
        android:layout_height="37dp"
        android:background="#23000000"
        android:gravity="center"
        android:text="@string/_30"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="228dp"
        android:layout_height="33dp"
        android:background="#23000000"
        android:gravity="center"
        android:text="@string/wi_fi"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="371sp"
        android:layout_height="200sp"
        android:background="#489C27B0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.196">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="41dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/emoji" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/logoo" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="130dp"
            android:background="@drawable/close" />

        <TextView
            android:layout_width="102dp"
            android:layout_height="38dp"
            android:layout_marginStart="70dp"
            android:gravity="center"
            android:text="@string/_1"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="102dp"
            android:layout_height="38dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="57dp"
            android:gravity="center"
            android:text="@string/_1"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="102dp"
            android:layout_height="38dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="120dp"
            android:gravity="center"
            android:text="@string/_1"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="160dp"
            android:gravity="center"
            android:text="@string/____"
            android:textColor="#5E000000"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="95dp"
            android:gravity="center"
            android:text="@string/__"
            android:textColor="#5E000000"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/___"
            android:textColor="#5E000000"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="150dp"
            android:gravity="center"
            android:text="@string/wordtree"
            android:textColor="#5E000000"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="85dp"
            android:gravity="center"
            android:text="@string/wordtwo"
            android:textColor="#5E000000"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/word"
            android:textColor="#5E000000"
            android:textSize="17dp" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>