<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-38dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="380dp"
            android:layout_height="506dp"
            android:layout_margin="15dp"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <TextView
                android:layout_width="132dp"
                android:layout_height="29dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="68dp"
                android:background="#0F232329"
                android:text="@string/all"
                android:textColor="#828796"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.016"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="233dp"
                android:layout_height="28dp"
                android:layout_marginTop="108dp"
                android:background="@drawable/bordertwo"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.136"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp"
                    android:background="@drawable/Vector"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="-170dp"
                    android:gravity="center"
                    android:text="@string/infoofnum"
                    android:textColor="#8A005EFF"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView17"
                android:layout_width="121dp"
                android:layout_height="29dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="68dp"
                android:background="#0F232329"
                android:text="@string/air"
                android:textColor="#828796"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.664"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="343dp"
                android:layout_height="52dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/vid"
                android:textColor="@color/black"
                android:textSize="22dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.135"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="189dp"
                android:layout_height="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="156dp"
                android:gravity="center"
                android:text="@string/flyinfo"
                android:textColor="#828796"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.832"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <Button
                android:layout_width="343dp"
                android:layout_height="48dp"
                android:layout_marginTop="212dp"
                android:backgroundTint="#0D72FF"
                android:text="@string/num"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.432"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="140dp"
                android:layout_height="36dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="144dp"
                android:gravity="center"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.016"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="343dp"
                android:layout_height="257dp"
                android:background="@drawable/img"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>